confluent-platform/istio/istio-cp-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: confluent-gw
  namespace: confluent
spec:
  selector:
    istio: ingressgateway # use istio's default ingress gateway
  servers:
  - hosts:
    # "confluent/" tells the ingress gateway
    #   to look for services in the confluent namespace
    - confluent/kafka.istio.cfk
    - confluent/b0.istio.cfk
    - confluent/b1.istio.cfk
    - confluent/b2.istio.cfk
    port:
      name: tls-kafka
      number: 443
      protocol: TLS
    tls:
      # Important! Kafka brokers require TLS passthrough
      mode: PASSTHROUGH
